.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Error__c/VMS_Shift_Error__c.object-meta.xml
<CustomObject>
    <description>Contain Shift Errors when creating/updating from VMS/ShiftMatch</description>
    <label>VMS Shift Error</label>
    <nameField>
        <displayFormat>VMS-ERR-{0000000}</displayFormat>
        <label>VMS Shift Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Shift Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>