.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Error__c/fields/External_Shift_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Shift_ID__c</fullName>
    <description>Shift ID from VMS</description>
    <externalId>true</externalId>
    <label>External Shift ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>