.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Error__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VMS Shift related to this Error</description>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>VMS Shift Errors</relationshipLabel>
    <relationshipName>VMS_Shift_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>