.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Error__c/fields/VMS_Shift_Info__c.field-meta.xml
<CustomField>
    <fullName>VMS_Shift_Info__c</fullName>
    <label>VMS Shift Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>