.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Error__c/fields/VMS_Shift_URL__c.field-meta.xml
<CustomField>
    <fullName>VMS_Shift_URL__c</fullName>
    <label>VMS Shift URL</label>
    <type>Url</type>
</CustomField>